--- a/views/css/styles.css
+++ b/views/css/styles.css
@@ -43,7 +43,7 @@ h2{
 #output p{
     padding: 8px 0px;
     margin: 0 20px;
-    border-bottom: 1px solid #e9e9e9;
+    border-bottom: 1px solid #eee;
     color: #555;
 }
 
@@ -61,6 +61,7 @@ h2{
 #output{
    background-color: #f9f9f9;
    border-bottom: 1px solid #eee;
+  
 }
 
 label{
