--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -9,7 +9,7 @@
           <div id="mario-chat">
 
       <% if (message.length > 0) { %>
-       <div class="alert alert-success col-sm-12">Welcome: <%= message %></div>
+       <div class="alert alert-success col-sm-12">Welcome: <%= data %></div>
         <% } %>
                                        
 
@@ -22,18 +22,27 @@
 
 
 
-        <div id="output"> 
-    <ul>
-
-
+        <div id="outputW"> 
+    
+    <% for(var i=0; i < message.length; i++) { %>
+   <ul>
+     <p><%= message[i].handle %> <b> <%= message[i].timestamp %></br> 
+     <%= message[i].message %></p>
+   </ul>
+   <% } %>
     </div>
+
+<div id="output"> 
+
+</div>
+
 
         <div id="feedback"></div>
 
 
          </div>
 
-         <input id="handle" type="hidden" placeholder="Handle" value="<%= message %>" />
+         <input id="handle" type="hidden" placeholder="Handle" value="<%= data %>" />
 
 
          <input id="message" type="text" placeholder="Message"/>
