--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -14,7 +14,7 @@
                                                                   
                             <div class="panel panel-info">
                                 <div class="panel-heading">
-                                    <div class="panel-title">Sign Up Fields * Marked are mandatory</div>
+                                    <div class="panel-title" style="color:red;">Sign Up Fields * Marked are mandatory</div>
                                     <div style="float:right; font-size: 85%; position: relative; top:-10px"><a id="signinlink" href="/">Sign In</a></div>
                                 </div>
                                 <div class="panel-body" >
@@ -34,7 +34,7 @@
                                                 <input type="text" class="form-control" name="first_name" placeholder="First Name">
                                             </div>
                                         </div>
-                                        
+
                                         <div class="form-group">
                                             <label for="last_name" class="col-md-3 control-label">Last Name *</label>
                                             <div class="col-md-9">
