--- a/views/css/styles.css
+++ b/views/css/styles.css
@@ -43,7 +43,6 @@ h2{
 #output p{
     padding: 8px 0px;
     margin: 0 20px;
-    border-bottom: 1px solid #eee;
     color: #555;
 }
 
@@ -59,10 +58,13 @@ h2{
 }
 
 #output{
-   background-color: #f9f9f9;
-   border-bottom: 1px solid #eee;
-  
+    border-radius: 25px;
+    border: 2px solid #73AD21;
+    padding: 20px;
+    width: auto px;
+    height: auto px
 }
+
 
 label{
     box-sizing: border-box;
@@ -77,7 +79,7 @@ input{
     display: block;
     width: 100%;
     background: #fff;
-    border-bottom: 1px solid #eee;
+    border: 1px solid #d8111b;;
     font-family: Nunito;
     font-size: 16px;
 }
