--- a/views/header.ejs
+++ b/views/header.ejs
@@ -4,11 +4,17 @@
         <meta charset="UTF-8">
         <title>FSE Chat Chat Room</title>
 
-      <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css"/>
+       <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css"/>
        <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
+      <!-- <link href ="../css/styles.css" rel="stylesheet">-->
+       <script src = "https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.4/socket.io.js" type="text/javascript"></script>
 
-       <link href ="../css/styles.css" rel="stylesheet">
-          <script src = "https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.4/socket.io.js" type="text/javascript"></script>
+          <!--3rd Party Fonts & Icons-->
+          <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans"/>
+          <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+          <link href ="../css/chatroom.css" rel="stylesheet">
+          <script src = "../js/chatroom.js" type="text/javascript"></script>
+
     </head>
     <body>
       <div class="container">
