=finally the session variables got to work

--- a/views/chatroom.ejs
+++ b/views/chatroom.ejs
@@ -146,7 +146,7 @@
                 <!--Header-->
                 <div class="row header-wrap">
                     <div class="chat-header col-sm-12">
-                        <h4> Welcome:  <%= username %>  to FSE-2018 Chat Room Application</h4>
+                        <h4> Welcome:  <b style="blue"><%= username %></b> to FSE-2018 Chat Room Application</h4>
                         <div class="header-button">
                             <a class="btn pull-right info-btn">
                                 <i class="fa fa-info-circle fa-lg"></i>
